WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21497
REGRESSION (
r37433
): Bytecode JSC tests are severely broken
https://bugs.webkit.org/show_bug.cgi?id=21497
Summary
REGRESSION (r37433): Bytecode JSC tests are severely broken
Cameron Zwarich (cpst)
Reported
2008-10-08 22:19:01 PDT
There is a typo in
r37433
that leads to a significant number of JSC test failures when using the bytecode interpreter. I can't finish running the tests without quitting and continuing the driver after each one. I unfortunately figured this out while spending a few hours reducing and chasing down
bug 21459
in bytecode.
Attachments
Proposed patch
(1.25 KB, patch)
2008-10-08 22:25 PDT
,
Cameron Zwarich (cpst)
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Cameron Zwarich (cpst)
Comment 1
2008-10-08 22:25:47 PDT
Created
attachment 24222
[details]
Proposed patch
Maciej Stachowiak
Comment 2
2008-10-08 22:26:27 PDT
Comment on
attachment 24222
[details]
Proposed patch r=me
Cameron Zwarich (cpst)
Comment 3
2008-10-08 22:31:03 PDT
Landed in
r37441
.
Darin Adler
Comment 4
2008-10-09 00:12:22 PDT
Oops. Sorry. Thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug